tests/paczka1/small_fuzzy/13105648.err
Error in line 10: 1hkwMK A894 46,44
Error in line 3: W4s5k7 A922 12,3
Error in line 8: 1hkwMK A453 83,0
